--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -11,4 +11,7 @@ spring.jpa.properties.hibernate.jdbc.batch_versioned_data=true
 spring.jpa.show-sql=false
 
 #Promotion discount
-promotion.discount.percentage=5
+promotion.discount.percentage.employee=30
+promotion.discount.percentage.affiliate=10
+promotion.discount.percentage.customer-long-time=5
+promotion.discount.regular.amount=5
